--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ APIStuff.hx
 art/build_x32-officialrelease.bat
 art/build_x64-officialrelease.bat
 art/test_x64-debug-officialrelease.bat
+*.kra~
+*.kra
+*.png~
+assets/preload/images/ammnomicons/story.png.kra
+assets/preload/images/ammnomicons/story.png.kra
